@@ -663,6 +663,10 @@ fully support the editing toolbar, but was found to be too confusing.
   broke use of legitimate multiple whitespace characters in bracketed link.
 * (bug 4838) Add relative oldids (prev, next, cur) for raw pages
   Patch by Lupin
+* (bug 5086) Force image resize dimensions on ImageMagick, as for instance
+  "-resize 100x35!"; some thumbs were off due to differences in rounding and
+  would be generated smaller than expected.
+
 
 === Caveats ===
 
